# code

./: .clang-format  .prettierrc  .style.yapf  CMakeLists.txt  README.md
src/lib/: CMakeLists.txt
src/lib/graph/: CMakeLists.txt
src/lib/misc/: CMakeLists.txt
src/lib/number/: CMakeLists.txt
src/lib/utils/: CMakeLists.txt
src/script/: match.py
src/solution/: CMakeLists.txt
src/solution/hdu/: wooden-sticks.cpp
src/solution/leetcode/: 1.cpp  1.rkt  10-regular-expression-matching.cpp  10.cpp  1089.ts  11.cpp  113.ts  115.cpp  121.cpp  122.cpp  123.cpp  126.cpp  127.cpp  128.cpp  131.cpp  132.cpp  135.cpp  138.ts  14.cpp  14.rkt  145.cpp  149.cpp  15.cpp  154.cpp  16.cpp  164.cpp  17.cpp  174.cpp  18.cpp  188.cpp  19.cpp  2.cpp  20.cpp  203.ts  21.cpp  212.cpp  214.cpp  218.cpp  22.cpp  224.cpp  (+77 more)
src/solution/pe/: 60.cpp
src/solution/uva/: 10001_-_Garden_of_Eden.c  10002_-_Center_of_Masses.c  10003_-_Cutting_Sticks.c  10010_-_Where's_Waldorf.c  10014_-_Simple_calculations.c  10018 - Reverse and Add.cpp  10025_-_The12_n=kproblem.c  10026_-_Shoemakers_Problem.cpp  10035_-_Primary_Arithmetic.cpp  10038_-_Jolly_Jumpers.cpp  10050_-_Hartals.cpp  10055_-_Hashmat_the_Brave_Warrior.c  10061_-_H_my_zo's_ad_hw_my_ds.c  10082_-_WERTYU.c  100_-_The_3n+1_problem.cpp  10108_-_The_Mosquito_Killer_Mosquitos.c  10110_-_Light_more_light.c  10111_-_Find_the_Winning_Move.c  10112_-_Myacm_Triangles.c  10115_-_Automatic_Editing.c  10137_-_The_Trip.cpp  10152_-_ShellSort.cpp  10161_-_Ant_on_a_Chessboard.c  10177_-_(234)-D_SqrRectsCubesBoxes.c  10194_-_Football_(aka_Soccer).c  101_-_The_Blocks_Problem_bad.cpp  10250_-_The_Other_Two_Trees.c  1025_-_A_Spy_in_the_Metro.cpp  1025_-_recursion_version.cpp  102_-_Ecological_Bin_Packing.cpp  10300_-_Ecological_Premium.c  10305_-_Ordering_Tasks.cc  10340_-_All_in_All.c  10361_-_Automatic_Poetry.c  10387_-_Billiard.c  (+112 more)
src/test/: CMakeLists.txt
src/test/src/: graph.cpp  misc.cpp  number.cpp  prime.cpp
src/topic/: CMakeLists.txt
(+11 files in other folders)
